--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.render-pipelines.universal": "12.1.7",
