--- a/Assets/Code/Scripts/UntitledSpiderGame.Runtime.asmdef
+++ b/Assets/Code/Scripts/UntitledSpiderGame.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Crabs",
-    "rootNamespace": "Crabs",
+    "name": "UntitledSpiderGame.Runtime",
+    "rootNamespace": "UntitledSpiderGame.Runtime",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
