--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ide.rider": "3.0.26",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.render-pipelines.universal": "12.1.7",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.ide.rider": "3.0.27",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
